style: add padding bottom to TodoContainer and ListsContainer to avoid overlapping text with footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -39,7 +39,7 @@
     transform: translate3d(-50%, -50%, 0);
 }
 
-/* @media all and (max-width: 600px) {
+@media all and (max-width: 600px) {
     :root {
         --button-size: 70px;
     }
@@ -54,4 +54,4 @@
         width: 80%;
         height: 80%;
     }
-} */
+}
