--- a/src/components/ListsContainer/ListsContainer.module.css
+++ b/src/components/ListsContainer/ListsContainer.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     min-height: 100vh;
+    padding-bottom: 90px;
     background-color: rgba(231, 231, 231, 1);
 }
 .header {
@@ -21,6 +22,9 @@ span.grey {
 }
 
 @media all and (max-width: 600px) {
+    .container {
+        padding-bottom: 70px;
+    }
     .loading {
         padding: 10px;
         font-size: 22px;
