--- a/src/components/TodoContainer/TodoContainer.module.css
+++ b/src/components/TodoContainer/TodoContainer.module.css
@@ -1,4 +1,5 @@
 .container {
+    padding-bottom: 90px;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -16,6 +17,9 @@
 }
 
 @media all and (max-width: 600px) {
+    .container {
+        padding-bottom: 70px;
+    }
     .loading {
         padding: 10px;
         font-size: 24px;
